--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ name = "rust-sudoku"
 [dependencies]
 piston = "*"
 pistoncore-glutin_window = "0.63.0"
+piston2d-graphics = "0.35.0"
+piston2d-opengl_graphics = "0.70.0"
 
